--- a/MonkeyShell.Microsoft.Azure.WebJobs.Extentions.Twitter.nuspec
+++ b/MonkeyShell.Microsoft.Azure.WebJobs.Extentions.Twitter.nuspec
@@ -2,20 +2,25 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>MonkeyShell.Microsoft.Azure.WebJobs.Extensions.Twitter</id>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <authors>CJ van der Smissen</authors>
     <owners>CJ van der Smissen</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <licenseUrl>https://github.com/introtocomputerscience/azure-functions-twitter-extension/blob/master/LICENSE</licenseUrl>
+    <license type="expression">MIT</license>
     <projectUrl>https://github.com/introtocomputerscience/azure-functions-twitter-extension</projectUrl>
     <description>This extension provides the ability to activate a webjob based on twitter events</description>
     <releaseNotes>
-      Initial release
+      Upgraded libraries to continue working with Twitter API
     </releaseNotes>
     <copyright>2019</copyright>
     <repository type="GitHub" url="https://github.com/introtocomputerscience/azure-functions-twitter-extension" />
+    <dependencies>
+      <group>
+        <dependency id="TweetinviAPI" version="5.0.3"/>
+      </group>
+    </dependencies>
   </metadata>
   <files>
-	<file src="TwitterTriggerExtension\bin\Release\netstandard2.0\TwitterTriggerExtension.dll" target="lib/netstandard2.0" />
+	  <file src="src\TwitterTriggerExtension\bin\Release\netstandard2.0\TwitterTriggerExtension.dll" target="lib/netstandard2.0" />
   </files>
 </package>
